--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -72,7 +72,7 @@ color: rgb(26, 129, 129);
   margin-bottom: 50px;
   background-color: #01020959;
   border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(154, 216, 255, 0.1);
+  box-shadow: 0 4px 10px 6px rgba(154, 216, 255, 0.1);
   opacity: 0.7; /* Make sections fully visible immediately */
   transform: translateY(10px);
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
