Finalizing the design
Changed the navbar alignment,  button colours. Now all the components are responsive for all the various display sizes and fixed all the issues had in the design

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,8 @@
     <h1>Reimagining the<br> essence of your<br> travel experience!</h1>
 
     <!-- Sign Up Button -->
-    <button class="signup-btn">
-      DOWNLOAD <span class="arrow">↗</span>
+    <button class="signup-btn" routerLink="/about">
+      READ MORE <span class="arrow">↗</span>
     </button>
 
   </div>
