--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -70,8 +70,8 @@
 /*Button styling*/
 .signup-btn {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b5b5b5;
-    color: #6a30f8;
+    background-color: #ffffff;
+    color: #146c8e;
     font-size: 24px;
     font-weight: 700;
     border: none;
@@ -93,7 +93,7 @@
   
   .signup-btn:hover {
     transform: scale(1.05);
-    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 6px 10px rgba(255, 179, 179, 0.2);
 }
 
 .signup-btn:hover .arrow {
