--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,20 @@
 <nav>
+  <!--Logo on the Left-->
   <div class="logo">
     <img src="/assets/images/Logo&motto.png" alt="Logo">
   </div>
-  <ul>
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/product">Our Services</a></li>
-  </ul>
 
-  <!-- Sign Up Button -->
-  <button class="signup-btn">
-    Sign up <span class="arrow">↗</span>
-  </button>
-  
+  <!--Navigation Links & Sign Up Button-->
+  <div class="nav-links">
+    <ul>
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/product">Our Services</a></li>
+    </ul>
+
+    <!--Sign Up Button-->
+    <button class="signup-btn">
+      DOWNLOAD <span class="arrow">↗</span>
+    </button>
+  </div>
 </nav>
