--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
 
-<div class="area">
-  
+  <div class="area">
 <footer>
-  
-  <div class="footer-container">
 
+  <div class="footer-container">
     <!--Quick Links-->
     <div class="footer-column">
       <h2>QUICK LINKS</h2>
@@ -23,12 +21,12 @@
       <h2>TEAMMATES</h2>
       <img src="/assets/images/line.png">
       <ul>
-        <li><a href="#">Suleiman Sabry</a></li>
-        <li><a href="#">Mahith</a></li>
-        <li><a href="#">Janidu</a></li>
-        <li><a href="#">Joshua</a></li>
-        <li><a href="#">Mindula</a></li>
-        <li><a href="#">Henuka</a></li>
+        <li><a href="#">Sulaiman Sabry</a></li>
+        <li><a href="#">Mahith Rajapaksha</a></li>
+        <li><a href="#">Mindula Perera</a></li>
+        <li><a href="#">Janidu Jayasekera</a></li>
+        <li><a href="#">Joshua Fernando</a></li>
+        <li><a href="#">Henuka De Silva</a></li>
       </ul>
       
     </div>
@@ -39,12 +37,12 @@
       <img src="/assets/images/line.png">
       <p>
         <i class="fas fa-map-marker-alt"></i>
-        No 69, <br>
+        No 16, Marys Road <br>
         Bambalapitiya, Colombo
       </p>
       <p>
         <i class="fas fa-phone-alt"></i>
-        +01 2345 6789
+        +076 110 3336
       </p>
     </div>
   </div>
@@ -53,10 +51,10 @@
   <div class="footer-bottom">
     <p>© 2025 ROAMEO</p>
     <div class="social-icons">
-      <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+
+      <a href="https://www.instagram.com/roameo.24/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+
     </div>
   </div>
 
