--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
   <video autoplay loop>
-    <source src="\assets\images\BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
+    <source src="\assets\images\BlackMarble_2016_rotate_2160p.mp4" type="video/mp4">
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
     <h1>Reimagining the<br> essence of your<br> travel experience!</h1>
 
     <!-- Sign Up Button -->
-    <button class="signup-btn" routerLink="/about">
+    <a  href="/about" class="signup-btn">
       READ MORE <span class="arrow">↗</span>
-    </button>
+    </a>
 
   </div>
 </div>
@@ -46,15 +46,15 @@
       <img src="/assets/prototype/planningD.jpg" alt="Sight Seeing Screen">
     </div>
 
-    <!--Card 5-->
+    <!-- Card 5
     <div class="pt-card">
       <img src="/assets/prototype/finalised.jpg" alt="Home screen">
     </div>
 
-    <!--Card 6-->
+    Card 6
     <div class="pt-card">
       <img src="/assets/prototype/ideaD.jpg" alt="Ideas">
-    </div>
+    </div> -->
 
     <!--Card 7-->
     <div class="pt-card">
