--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,9 +5,20 @@
   padding: 15vw;
   margin-top: 80px;
   margin-bottom: 80px;
-  background: radial-gradient(circle at left, rgba(85, 174, 194, 0.4), transparent 20%) #000;
+  background: radial-gradient(circle at left, #01a5feb8, transparent 19%)
 }
-
+.area::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/assets/images/Wavy.png') no-repeat 0px;
+  background-size: cover;
+  opacity: 0.05; /* Adjust this to control the image transparency */
+  z-index: 1; /* Place the image behind other content */
+}
 footer {
   z-index: 1;
   position: relative;
@@ -15,7 +26,6 @@ footer {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(0, 14, 20);
   color: rgb(189, 202, 255);
   padding: 2vw;
