--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,6 @@
+
+
 * {
-    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,13 +9,13 @@
 /* Fullscreen Background Image */
 .earth {
     width: auto;
-    height: 150vh;
+    height: 200vh;
     position: relative;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -90px;
+    margin-top: -250px;
 }
 
 .earth video {
@@ -28,8 +29,7 @@
     z-index: -1;
 }
 
-/*Starting overlay text styling*/
-/* Overlay to improve text readability */
+/* Starting overlay text styling */
 .overlay {
     position: relative;
     text-align: center;
@@ -37,43 +37,45 @@
     z-index: 1;
 }
 
-
 .overlay h1 {
+    font-family: Oswald, sans-serif;
     font-size: 5rem;
-    font-weight:900;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+    font-weight: 900;
     text-transform: uppercase;
-    letter-spacing: -4px;
+    letter-spacing: -3px;
+    /* margin-top: -250px; */
 
-    /*Top to bottom gradient*/
+    /* Top to bottom gradient */
     background: linear-gradient(
         to bottom,
-        #ffffff 0%, /*Whiter at top*/
-        #c7c8c9 50%,
-        #585858 100% /*Darker in bottom*/
+        #ffffff 0%, /* Whiter at top */
+        #7c7c7c 50%,
+        #5d5d5d 100% /* Darker at bottom */
     );
 
-    /*Clip gradient to text*/
+    /* Clip gradient to text */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     color: transparent;
     height: auto;
+
+    line-height: 1.3;
+    
 }
 
 .overlay p {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
     margin-top: 1rem;
 }
 
-/*Button styling*/
+/* Button styling */
 .signup-btn {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #ffffff;
-    color: #146c8e;
-    font-size: 24px;
-    font-weight: 700;
+    color: #44CAE9;
+    font-size: 28px;
+    font-weight: 800;
+    text-decoration: none;
     border: none;
     padding: 15px 30px;
     border-radius: 40px;
@@ -86,13 +88,13 @@
 
 .signup-btn .arrow {
     font-size: 30px;
-    font-weight: 900;
+    font-weight: 1000;
     display: inline-block;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
   
-  .signup-btn:hover {
-    transform: scale(1.05);
+.signup-btn:hover {
+    transform: scale(1.1);
     box-shadow: 0px 6px 10px rgba(255, 179, 179, 0.2);
 }
 
@@ -107,14 +109,12 @@
     align-items: center;
     text-align: center;
 }
-  
-  .signup-btn {
-    margin-top: 40px; /* Adjust spacing*/
+
+.signup-btn {
+    margin-top: 40px;
 }
 
-  
-
-/*Prototype flash cards*/
+/* Prototype flash cards */
 .prototype-section {
     color: #ccc;
     max-width: 1200px;
@@ -127,23 +127,22 @@
     font-size: 4rem;
     font-weight: 500;
     margin-bottom: 40px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: left;
+    text-align: left;
 
-    /*Colour gradient*/
-    background: linear-gradient(to right, rgb(124, 244, 255), rgb(0, 0, 0)); /* Blue to purple gradient */
-    -webkit-background-clip: text; /* Applies the gradient to the text */
-    color: transparent; /* Makes text color transparent to show the gradient */
-    
+    /* Color gradient */
+    background: linear-gradient(to right, rgb(124, 244, 255), rgb(0, 0, 0)); /* Blue to black gradient */
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
-/*Grid design*/
+/* Grid design */
 .img-grid {
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(3, 2fr);
     gap: 20px;
 }
 
-/*Individual Cards*/
+/* Individual Cards */
 .pt-card {
     position: relative;
     border-radius: 40px;
@@ -159,6 +158,5 @@
 }
 
 .pt-card:hover img {
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
-
