--- a/src/app/stats/stats.component.css
+++ b/src/app/stats/stats.component.css
@@ -26,15 +26,19 @@
 /* Each column is moved down extra 30px to appear diagonally */
 .stats-column:nth-child(1) {
   margin-top: 0;
+  color:#ffffff;
 }
 .stats-column:nth-child(2) {
-  margin-top: 50px;
+  margin-top: 100px;
+  color:#b1cad0;
 }
 .stats-column:nth-child(3) {
-  margin-top: 100px;
+  margin-top: 200px;
+  color:#7cc0cf;
 }
 .stats-column:nth-child(4) {
-  margin-top: 150px;
+  margin-top: 300px;
+  color:#89d8e9;
 }
 
 /* Heading and paragraph styling */
